--- a/src/index.css
+++ b/src/index.css
@@ -94,7 +94,7 @@
   }
 
   .gradient-mypage {
-    background-image: url('@/assets/img/home.png');
+    background-image: url('@/assets/img/gradientbackground.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -106,6 +106,39 @@
     border-radius: 20px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
   }
+
+  .gradient-time-capsule-page{
+    
+    background-image: url('@/assets/img/time_capsule.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 480px;
+    height: 844px;
+    margin: 0;
+    position: relative;
+    overflow: hidden;
+    border-radius: 20px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+  }
+
+  .gradient-time-capsule {
+    background: linear-gradient(
+      to bottom,
+      #f98fab 0%,
+      #fcd6e0 35%,
+      #feeaf2 70%,
+      #ffffff 100%  
+    );
+    width: 480px;
+    height: 844px;
+    margin: 0;
+    position: relative;
+    overflow: hidden;
+    border-radius: 20px;
+    box-shadow: 0 0 30px rgba(168, 85, 247, 0.3);
+  }
+
 
   .gradient-emotion-report {
     background-image: url('@/assets/img/home.png');
