feat: 월간 및 주간 리포트 페이지 및 서비스 추가

--- a/src/index.css
+++ b/src/index.css
@@ -94,7 +94,7 @@
   }
 
   .gradient-mypage {
-    background-image: url('@/assets/img/gradientbackground.png');
+    background-image: url('@/assets/img/home.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
