feat: 스크롤 페이지 숨기기

--- a/src/index.css
+++ b/src/index.css
@@ -364,6 +364,7 @@
   }
 
   .custom-scrollbar::-webkit-scrollbar{
+    display: none;
     width: 4px;
   }
 
@@ -381,7 +382,8 @@
   }
 
   .custom-scrollbar {
-    scrollbar-width: thin;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
     scrollbar-color: rgba(0,0,0,0.2) transparent;
   }
 }
